--- a/client/src/scss/partials/about.scss
+++ b/client/src/scss/partials/about.scss
@@ -19,7 +19,7 @@
 	}
 
 	// set max width
-	@media screen and (min-width: 1225px){
+	@media screen and (min-width: 1225px) {
 		width: 950px;
 	}
 
@@ -40,10 +40,10 @@
 		margin-top: 1.25rem;
 		text-align: center;
 		line-height: 1.25rem;
-		font-size: .83rem;
+		font-size: 0.83rem;
 		text-align: justify;
 
-		@media screen and (min-width: 866px){
+		@media screen and (min-width: 866px) {
 			text-align: justify;
 			margin: 0 0 0 4rem;
 		}
@@ -58,7 +58,7 @@
 
 		a:hover {
 			text-decoration: underline;
-			text-decoration-color: rgb(128,128,128);
+			text-decoration-color: rgb(128, 128, 128);
 		}
 	}
 }
