--- a/client/src/scss/partials/_clearfix.scss
+++ b/client/src/scss/partials/_clearfix.scss
@@ -1,14 +1,20 @@
 // CLEARFIX
 .clearfix:after {
-     visibility: hidden;
-     display: block;
-     font-size: 0;
-     content: " ";
-     clear: both;
-     height: 0;
-     }
-.clearfix { display: inline-block; }
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+}
+.clearfix {
+	display: inline-block;
+}
 /* start commented backslash hack \*/
-* html .clearfix { height: 1%; }
-.clearfix { display: block; }
+* html .clearfix {
+	height: 1%;
+}
+.clearfix {
+	display: block;
+}
 /* close commented backslash hack */
