--- a/client/src/scss/partials/work.scss
+++ b/client/src/scss/partials/work.scss
@@ -1,22 +1,20 @@
 #workContainer {
-	/*border: 2px dotted black;*/
 	display: flex;
 	flex-flow: column nowrap;
 	padding-bottom: 1.5rem;
-	font-size: .83rem;
+	font-size: 0.83rem;
 }
 
 .work {
-	/*border: 1px solid #ccc;*/
 	// style for container
 	flex: 0 0 auto;
 	width: 80%;
 	align-self: center;
 	margin-top: 1.25rem;
-	padding-bottom: .75rem;
+	padding-bottom: 0.75rem;
 	text-align: left;
-	background-color: rgb(255,255,255);
-	box-shadow: 0 4px .5rem #ccc;
+	background-color: rgb(255, 255, 255);
+	box-shadow: 0 4px 0.5rem #ccc;
 
 	@media screen and (min-width: 750px) {
 		max-width: 800px;
@@ -38,7 +36,7 @@
 			height: 320px;
 		}
 
-		@media screen and (min-width: 615px){
+		@media screen and (min-width: 615px) {
 			height: 440px;
 		}
 
@@ -51,8 +49,8 @@
 		flex: 0 0 auto;
 		order: 1;
 		font-size: 1.125rem;
-		font-family: 'Oswald', sans-serif;
-		margin: .5rem 0 .5rem 1rem;
+		font-family: "Oswald", sans-serif;
+		margin: 0.5rem 0 0.5rem 1rem;
 
 		@media screen and (min-width: 750px) {
 			font-size: 1.5rem;
@@ -63,9 +61,9 @@
 		flex: 0 0 auto;
 		order: 2;
 		font-size: 1rem;
-		font-family: 'Montserrat', sans-serif;
+		font-family: "Montserrat", sans-serif;
 		font-weight: 500;
-		margin-bottom: .5rem;
+		margin-bottom: 0.5rem;
 		margin-left: 1rem;
 
 		@media screen and (min-width: 750px) {
@@ -76,37 +74,38 @@
 	.description {
 		flex: 0 0 auto;
 		order: 3;
-		margin-bottom: .625rem;
+		margin-bottom: 0.625rem;
 		line-height: 1rem;
 		padding: 0 1rem;
-		font-family: 'Montserrat', sans-serif;
+		font-family: "Montserrat", sans-serif;
 		font-weight: 300;
 	}
 
 	.workContributions {
 		flex: 0 0 auto;
 		order: 4;
-		font-family: 'Montserrat', sans-serif;
+		font-family: "Montserrat", sans-serif;
 		font-weight: 300;
 
 		.contributions {
 			font-size: 1rem;
-			font-family: 'Montserrat', sans-serif;
+			font-family: "Montserrat", sans-serif;
 			font-weight: 500;
-			margin: 0 0 .125rem 1rem;
+			margin: 0 0 0.125rem 1rem;
 
 			@media screen and (min-width: 750px) {
 				font-size: 1.125rem;
 			}
 		}
 
-		ul, li {
+		ul,
+		li {
 			width: 90%;
 			text-align: left;
 			list-style-position: outside;
 			list-style-type: disc;
-			margin-left:  1.5rem;
-			margin-bottom: .25rem;
+			margin-left: 1.5rem;
+			margin-bottom: 0.25rem;
 			line-height: 1.25rem;
 		}
 	}
