--- a/client/src/scss/partials/work.scss
+++ b/client/src/scss/partials/work.scss
@@ -86,6 +86,10 @@
 		order: 4;
 		font-family: "Montserrat", sans-serif;
 		font-weight: 300;
+		margin: 0;
+		padding: 0;
+		-webkit-margin-before: 0rem;
+		-webkit-margin-after: 0rem;
 
 		.contributions {
 			font-size: 1rem;
@@ -98,15 +102,42 @@
 			}
 		}
 
-		ul,
 		li {
 			width: 90%;
 			text-align: left;
+			line-height: 1.25rem;
 			list-style-position: outside;
 			list-style-type: disc;
-			margin-left: 1.5rem;
-			margin-bottom: 0.25rem;
-			line-height: 1.25rem;
+			margin: 0 0 0.25rem 1rem;
+		}
+
+		ul {
+			margin: 0 0 0 1.5rem;
+		}
+	}
+
+	.links {
+		order: 5;
+		font-family: "Montserrat", sans-serif;
+		font-weight: 300;
+		margin: 0.625rem 0 0.5rem 0;
+		padding: 0 1rem;
+		white-space: nowrap;
+		line-height: 1.5rem;
+
+		p {
+			font-weight: 500;
+			overflow: hidden;
+		}
+
+		a {
+			font-weight: 300;
+			padding-left: .625rem;
+		}
+
+		a:hover {
+			text-decoration: underline;
+			text-decoration-color: rgb(0, 0, 0);
 		}
 	}
 }
