Removed activeStyle from my Nav menu and replaced it with activeClassName so I can style the elements in my CSS stylesheet. I am also incorporatin web kit extensions so the styling can stay consistent when viewed in other broswers such as Safari.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -523,7 +523,13 @@ body {
     margin-left: 2rem;
     letter-spacing: 0.5rem;
     text-transform: uppercase;
-    font-family: "Oswald", sans-serif; }
+    font-family: "Oswald", sans-serif;
+    font-weight: 700; }
+  #Nav .active {
+    font-weight: 600;
+    text-decoration: underline;
+    text-decoration-color: white;
+    -web-kit-text-decoration-color: white; }
   #Nav #desktop-nav {
     flex: 0 0 auto;
     order: 2;
