--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -39,6 +39,14 @@ body {
     letter-spacing: 0.5rem;
     text-transform: uppercase;
     font-family: "Oswald", sans-serif;
+    font-weight: 700;
+  }
+
+  .active {
+    font-weight: 600;
+    text-decoration: underline;
+    text-decoration-color: rgb(255, 255, 255);
+    -web-kit-text-decoration-color: rgb(255, 255, 255);
   }
 
   #desktop-nav {
