--- a/client/src/index.css
+++ b/client/src/index.css
@@ -187,6 +187,7 @@ table {
     order: 1;
     font-size: 1.125rem;
     font-family: "Oswald", sans-serif;
+    font-weight: 700;
     margin: 0.5rem 0 0.5rem 1rem; }
     @media screen and (min-width: 750px) {
       .work .company {
@@ -369,6 +370,7 @@ table {
 #technical-skills,
 #contact-header {
   font-family: "Oswald", sans-serif;
+  font-weight: 700;
   font-size: 1.25rem;
   text-transform: uppercase;
   margin: 1.5rem 0 0.25rem 0;
@@ -378,14 +380,14 @@ table {
 #office-social-media-manager,
 #resident-assistant,
 #fullstack-javascript-web-engineering,
-#bachelor-of-arts-in-interdisciplinary-studies {
+#bachelor-of-arts-in-interdisciplinary-studies,
+#communications-with-a-minor-in-social-entrepreneurship {
   font-size: 1.17rem;
   line-height: 1.625rem; }
 
 #-hele-io-https-hele-io-,
 #handcrafted-restaurants-llc,
 #office-of-residential-life-housing-services-at-new-york-university,
-#communications-with-a-minor-in-social-entrepreneurship,
 #languages,
 #frontend,
 #server-side,
@@ -526,10 +528,13 @@ body {
     font-family: "Oswald", sans-serif;
     font-weight: 700; }
   #Nav .active {
-    font-weight: 600;
-    text-decoration: underline;
-    text-decoration-color: white;
-    -web-kit-text-decoration-color: white; }
+    text-decoration: none; }
+    @media screen and (min-width: 750px) {
+      #Nav .active {
+        font-weight: 600;
+        text-decoration: underline;
+        text-decoration-color: white;
+        -web-kit-text-decoration-color: white; } }
   #Nav #desktop-nav {
     flex: 0 0 auto;
     order: 2;
@@ -560,6 +565,10 @@ body {
     color: black;
     text-align: center;
     padding: 0.5rem 0; }
+  #mobile-nav .mobileActive {
+    background-color: black;
+    color: white;
+    font-weight: 600; }
   @media screen and (min-width: 750px) {
     #mobile-nav {
       display: none; } }
