--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -43,10 +43,14 @@ body {
   }
 
   .active {
-    font-weight: 600;
-    text-decoration: underline;
-    text-decoration-color: rgb(255, 255, 255);
-    -web-kit-text-decoration-color: rgb(255, 255, 255);
+    text-decoration: none;
+
+    @media screen and (min-width: 750px) {
+      font-weight: 600;
+      text-decoration: underline;
+      text-decoration-color: rgb(255, 255, 255);
+      -web-kit-text-decoration-color: rgb(255, 255, 255);
+    }
   }
 
   #desktop-nav {
@@ -90,6 +94,12 @@ body {
     color: rgb(0, 0, 0);
     text-align: center;
     padding: 0.5rem 0;
+  }
+
+  .mobileActive {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    font-weight: 600;
   }
 
   // hide when viewing on desktop layout
