Added font weight to all text that uses the font Oswald.

--- a/client/src/scss/partials/resume.scss
+++ b/client/src/scss/partials/resume.scss
@@ -162,6 +162,7 @@
 #technical-skills,
 #contact-header {
 	font-family: "Oswald", sans-serif;
+	font-weight: 700;
 	font-size: 1.25rem;
 	text-transform: uppercase;
 	margin: 1.5rem 0 0.25rem 0;
@@ -173,7 +174,8 @@
 #office-social-media-manager,
 #resident-assistant,
 #fullstack-javascript-web-engineering,
-#bachelor-of-arts-in-interdisciplinary-studies {
+#bachelor-of-arts-in-interdisciplinary-studies,
+#communications-with-a-minor-in-social-entrepreneurship {
 	font-size: 1.17rem;
 	line-height: 1.625rem;
 }
@@ -182,7 +184,6 @@
 #-hele-io-https-hele-io-,
 #handcrafted-restaurants-llc,
 #office-of-residential-life-housing-services-at-new-york-university,
-#communications-with-a-minor-in-social-entrepreneurship,
 #languages,
 #frontend,
 #server-side,
