--- a/client/src/scss/partials/work.scss
+++ b/client/src/scss/partials/work.scss
@@ -50,6 +50,7 @@
 		order: 1;
 		font-size: 1.125rem;
 		font-family: "Oswald", sans-serif;
+		font-weight: 700;
 		margin: 0.5rem 0 0.5rem 1rem;
 
 		@media screen and (min-width: 750px) {
