--- a/client/src/scss/partials/about.scss
+++ b/client/src/scss/partials/about.scss
@@ -6,44 +6,44 @@
 }
 
 #About-Container {
-	width: 80%;
-	margin-top: 1.25rem;
-	padding-bottom: 1.5rem;
+	width: $mobile-div-width;
+	margin-top: $top;
+	padding-bottom: $bottom;
 
 	display: flex;
 	flex-flow: column wrap;
 
-	@media screen and (min-width: 866px) {
+	@include respond-to('about-medium') {
 		flex-flow: row nowrap;
-		width: 85%;
+		width: $desktop-div-width;
 	}
 
 	// set max width
-	@media screen and (min-width: 1225px) {
+	@include respond-to('large') {
 		width: 950px;
 	}
 
 	img {
 		align-self: center;
 
-		@media screen and (max-width: 480px) {
+		@include respond-to('max-mobile') {
 			width: 100%;
 			height: auto;
 		}
 
-		@media screen and (min-width: 866px) {
+		@include respond-to('about-medium') {
 			align-self: flex-start;
 		}
 	}
 
 	#text {
-		margin-top: 1.25rem;
+		margin-top: $top;
 		text-align: center;
-		line-height: 1.25rem;
-		font-size: 0.83rem;
+		line-height: $line-height;
+		font-size: $mobile-font-size;
 		text-align: justify;
 
-		@media screen and (min-width: 866px) {
+		@include respond-to('about-medium') {
 			text-align: justify;
 			margin: 0 0 0 4rem;
 		}
@@ -53,7 +53,7 @@
 		}
 
 		p {
-			margin-top: 1.25rem;
+			margin-top: $top;
 		}
 
 		a:hover {
