--- a/client/src/scss/partials/work.scss
+++ b/client/src/scss/partials/work.scss
@@ -1,22 +1,22 @@
 #workContainer {
 	display: flex;
 	flex-flow: column nowrap;
-	padding-bottom: 1.5rem;
-	font-size: 0.83rem;
+	padding-bottom: $bottom;
+	font-size: $mobile-font-size;
 }
 
 .work {
 	// style for container
 	flex: 0 0 auto;
-	width: 80%;
+	width: $mobile-div-width;
 	align-self: center;
-	margin-top: 1.25rem;
+	margin-top: $top;
 	padding-bottom: 0.75rem;
 	text-align: left;
 	background-color: rgb(255, 255, 255);
 	box-shadow: 0 4px 0.5rem #ccc;
 
-	@media screen and (min-width: 750px) {
+	@include respond-to('min-desktop') {
 		max-width: 800px;
 	}
 
@@ -32,7 +32,7 @@
 		object-fit: cover;
 		object-position: 50% top;
 
-		@media screen and (min-width: 480px) {
+		@include respond-to('min-desktop') {
 			height: 320px;
 		}
 
@@ -40,7 +40,7 @@
 			height: 440px;
 		}
 
-		@media screen and (min-width: 750px) {
+		@include respond-to('min-desktop') {
 			height: 560px;
 		}
 	}
@@ -48,27 +48,27 @@
 	.company {
 		flex: 0 0 auto;
 		order: 1;
-		font-size: 1.125rem;
+		font-size: $desktop-font-size + 0.125rem;
 		font-family: "Oswald", sans-serif;
 		font-weight: 700;
 		margin: 0.5rem 0 0.5rem 1rem;
 
 		@media screen and (min-width: 750px) {
-			font-size: 1.5rem;
+			font-size: $desktop-font-size + 0.5rem;
 		}
 	}
 
 	.position {
 		flex: 0 0 auto;
 		order: 2;
-		font-size: 1rem;
+		font-size: $desktop-font-size;
 		font-family: "Montserrat", sans-serif;
 		font-weight: 500;
 		margin-bottom: 0.5rem;
 		margin-left: 1rem;
 
-		@media screen and (min-width: 750px) {
-			font-size: 1.125rem;
+		include respond-to('min-desktop') {
+			font-size: $desktop-font-size + 0.125rem;
 		}
 	}
 
@@ -76,7 +76,7 @@
 		flex: 0 0 auto;
 		order: 3;
 		margin-bottom: 0.625rem;
-		line-height: 1rem;
+		line-height: $line-height;
 		padding: 0 1rem;
 		font-family: "Montserrat", sans-serif;
 		font-weight: 300;
@@ -89,24 +89,22 @@
 		font-weight: 300;
 		margin: 0;
 		padding: 0;
-		-webkit-margin-before: 0rem;
-		-webkit-margin-after: 0rem;
 
 		.contributions {
-			font-size: 1rem;
+			font-size: $desktop-font-size;
 			font-family: "Montserrat", sans-serif;
 			font-weight: 500;
 			margin: 0 0 0.125rem 1rem;
 
-			@media screen and (min-width: 750px) {
-				font-size: 1.125rem;
+			@include respond-to('min-desktop') {
+				font-size: $desktop-font-size + 0.125rem;
 			}
 		}
 
 		li {
 			width: 90%;
 			text-align: left;
-			line-height: 1.25rem;
+			line-height: $line-height;
 			list-style-position: outside;
 			list-style-type: disc;
 			margin: 0 0 0.25rem 1rem;
@@ -124,7 +122,7 @@
 		margin: 0.625rem 0 0.5rem 0;
 		padding: 0 1rem;
 		white-space: nowrap;
-		line-height: 1.5rem;
+		line-height: $line-height;
 
 		p {
 			font-weight: 500;
